--- a/style.css
+++ b/style.css
@@ -12,24 +12,26 @@ body{
     border-radius: 6px;
    padding: 30px 20px;
     border: 1px solid blueviolet;
-    box-shadow: 0 8px 6px rgba(0,0,0,0);
     text-align: center;
+    box-shadow: 0 5px 10px;
+    min-width: 20px;
 }
-h1{
-   position: relative;
-   top: 0;
-   
-}
+  
+
 input{
-    padding: 30px 20px;
+    padding: 20px;;
     border: 1px solid grey;
     text-align: center;
     border-radius: 6px;
+    width: 17%;
+    box-shadow: 0 3px 5px ;
+    background-color: aliceblue;
+    margin-bottom: 5px;
    
 
 }
 button{
-    padding: 20px 50px;
+    padding:5px 35px; 
     border-radius: 3px;
     border: none;
     background-color: rgb(55, 16, 92);
@@ -38,8 +40,12 @@ button{
     cursor: pointer;
     font-size: 20px;
     display: block;
-    margin-left: 38%;
+    margin-left: 39%;
     margin-top: 2%;
+    font-weight: bold;
+}
+button:hover{
+    box-shadow: 0 3px 5px black;
 }
 
 
